--- a/ansible-mac-setup/main.yml
+++ b/ansible-mac-setup/main.yml
@@ -26,6 +26,7 @@
       - rar
       - google-cloud-sdk
       - openssh
+      - pre-commit
       # - docker-compose # included with docker cask
     ignore_errors: yes
     tags:
@@ -105,8 +106,8 @@ post_tasks:
 
         Alternatively, manually add the following to your shell init:
             eval "$(conda "shell.$(basename "${SHELL}")" hook)"
-        
+
         In order to remove (base) from default shell:
         `conda config --set auto_activate_base false`
-        - 
+        -
     delegate_to: localhost
