--- a/ansible-mac-setup/macos.yml
+++ b/ansible-mac-setup/macos.yml
@@ -26,6 +26,7 @@
         - { domain: 'com.apple.screencapture', key: 'location', type: 'string', value: "{{ home_dir }}/Pictures/Screenshots" }
         - { domain: 'com.apple.screencapture', key: 'type', type: 'string', value: 'png' }
         - { domain: 'com.apple.screencapture', key: 'disable-shadow', type: 'bool', value: true }
+        - { domain: 'com.apple.dock', key: 'static-only', type: 'bool', value: true }
 
     - name: Finder settings
       community.general.osx_defaults:
