--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -77,8 +77,14 @@
         plugins=(git git-prompt web-search jsontools)
         export ZSH="$HOME/.oh-my-zsh"
         source $ZSH/oh-my-zsh.sh
+
+        # for mac M series
         source /opt/homebrew/share/zsh-autosuggestions/zsh-autosuggestions.zsh
         source /opt/homebrew/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
+
+        # for mac intel
+        # source /usr/local/share/zsh-autosuggestions/zsh-autosuggestions.zsh
+        # source /usr/local/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
 
         RPROMPT='%*'
 
