downloading and unzipping extensions

--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -82,7 +82,7 @@
       - sqlitestudio
       - orbstack
       # Browsers
-      - brave-browser
+      - ungoogled-chromium
       # Productivity
       - zoom
       - raycast
