--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,3 +24,12 @@ repos:
   - id: ruff
     args: ['--fix', '--exit-non-zero-on-fix']
   - id: ruff-format
+- repo: https://github.com/scop/pre-commit-shfmt
+  rev: v3.12.0-2
+  hooks:
+  - id: shfmt
+    args: ['-i', '2', '-ci', '-sr']
+- repo: https://github.com/shellcheck-py/shellcheck-py
+  rev: v0.11.0.1
+  hooks:
+  - id: shellcheck
